tests/negative/Internal/TargetNotATrait.juvix
module TargetNotATrait;

type Maybe A := just A | nothing;

instance
inst {A} : Maybe A := nothing;
